# osciboot

./: Dockerfile.development  LICENSE  Makefile  Makefile.build  meson.build  osciboot.conf
include/: color.h  configuration.h  font.h  font8x16.h  framebuffer.h  input_handler.h  keys.h  log.h  menu.h  ui.h
source/: configuration.c  font.c  framebuffer.c  input_handler.c  log.c  main.c  menu.c  ui.c
